--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
+git add requirements.txt
+git commit -m "Remove reportlab to fix deployment"
+git push
 Flask==3.0.0
 gunicorn==21.2.0
 openpyxl==3.1.2
