--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-git add requirements.txt
-git commit -m "Remove reportlab to fix deployment"
-git push
 Flask==3.0.0
 gunicorn==21.2.0
+reportlab==3.6.12
 openpyxl==3.1.2
 flask-paginate==1.0.0
